package com.zamaz.adk.workflow;

import com.google.cloud.aiplatform.v1.*;
import com.google.cloud.firestore.Firestore;
import com.google.cloud.pubsub.v1.Publisher;
import com.google.protobuf.Value;
import java.util.*;
import java.util.concurrent.*;
import java.util.function.Function;
import java.util.function.Predicate;

/**
 * Google ADK-based Workflow Engine - LangGraph equivalent for Java
 * Uses Vertex AI for all AI operations
 */
public class WorkflowEngine {
    private final Map<String, WorkflowNode> nodes = new ConcurrentHashMap<>();
    private final Map<String, List<Edge>> edges = new ConcurrentHashMap<>();
    private final StateStore stateStore;
    private final VertexAIClient vertexClient;
    private final ExecutorService executor;
    
    public WorkflowEngine(Firestore firestore, String projectId, String location) {
        this.stateStore = new FirestoreStateStore(firestore);
        this.vertexClient = new VertexAIClient(projectId, location);
        this.executor = Executors.newWorkStealingPool();
    }
    
    /**
     * Workflow node that processes state using Vertex AI
     */
    public abstract static class WorkflowNode {
        protected final String nodeId;
        protected final String modelId; // gemini-1.5-flash, gemini-1.5-pro, etc.
        
        public WorkflowNode(String nodeId, String modelId) {
            this.nodeId = nodeId;
            this.modelId = modelId;
        }
        
        public abstract CompletableFuture<State> process(State input, VertexAIClient client);
        
        public String getNodeId() { return nodeId; }
    }
    
    /**
     * Edge with conditional routing
     */
    public static class Edge {
        private final String from;
        private final String to;
        private final Predicate<State> condition;
        private final Function<State, Double> weight; // For dynamic routing
        
        public Edge(String from, String to, Predicate<State> condition) {
            this(from, to, condition, state -> 1.0);
        }
        
        public Edge(String from, String to, Predicate<State> condition, 
                   Function<State, Double> weight) {
            this.from = from;
            this.to = to;
            this.condition = condition;
            this.weight = weight;
        }
    }
    
    /**
     * Workflow state with Google Cloud integration
     */
    public static class State {
        private final String workflowId;
        private final Map<String, Object> data;
        private final List<String> executionPath;
        private final Map<String, String> metadata;
        private final long timestamp;
        
        public State(String workflowId) {
            this.workflowId = workflowId;
            this.data = new ConcurrentHashMap<>();
            this.executionPath = new CopyOnWriteArrayList<>();
            this.metadata = new ConcurrentHashMap<>();
            this.timestamp = System.currentTimeMillis();
        }
        
        public State derive() {
            State newState = new State(workflowId);
            newState.data.putAll(this.data);
            newState.executionPath.addAll(this.executionPath);
            newState.metadata.putAll(this.metadata);
            return newState;
        }
        
        public void recordExecution(String nodeId) {
            executionPath.add(nodeId);
        }
        
        // Getters and setters
        public Object get(String key) { return data.get(key); }
        public void put(String key, Object value) { data.put(key, value); }
        public String getWorkflowId() { return workflowId; }
        public List<String> getExecutionPath() { return new ArrayList<>(executionPath); }
    }
    
    /**
     * Builder for workflow construction
     */
    public static class Builder {
        private final WorkflowEngine engine;
        
        public Builder(Firestore firestore, String projectId, String location) {
            this.engine = new WorkflowEngine(firestore, projectId, location);
        }
        
        public Builder addNode(WorkflowNode node) {
            engine.nodes.put(node.getNodeId(), node);
            return this;
        }
        
        public Builder addEdge(String from, String to) {
            return addEdge(from, to, state -> true);
        }
        
        public Builder addEdge(String from, String to, Predicate<State> condition) {
            engine.edges.computeIfAbsent(from, k -> new ArrayList<>())
                .add(new Edge(from, to, condition));
            return this;
        }
        
        public Builder addConditionalEdge(String from, Map<Predicate<State>, String> conditions) {
            conditions.forEach((condition, to) -> addEdge(from, to, condition));
            return this;
        }
        
        public WorkflowEngine build() {
            // Validate graph
            validateGraph();
            return engine;
        }
        
        private void validateGraph() {
            // Check for cycles, unreachable nodes, etc.
            Set<String> visited = new HashSet<>();
            Set<String> recursionStack = new HashSet<>();
            
            for (String node : engine.nodes.keySet()) {
                if (!visited.contains(node)) {
                    if (hasCycle(node, visited, recursionStack)) {
                        throw new IllegalStateException("Workflow contains cycles");
                    }
                }
            }
        }
        
        private boolean hasCycle(String node, Set<String> visited, Set<String> stack) {
            visited.add(node);
            stack.add(node);
            
            List<Edge> nodeEdges = engine.edges.get(node);
            if (nodeEdges != null) {
                for (Edge edge : nodeEdges) {
                    if (!visited.contains(edge.to)) {
                        if (hasCycle(edge.to, visited, stack)) {
                            return true;
                        }
                    } else if (stack.contains(edge.to)) {
                        return true;
                    }
                }
            }
            
            stack.remove(node);
            return false;
        }
    }
    
    /**
     * Execute workflow with Google Cloud integration
     */
    public CompletableFuture<State> execute(String startNode, State initialState) {
        return executeNode(startNode, initialState)
            .thenCompose(state -> {
                // Save state to Firestore
                stateStore.save(state);
                
                // Find next nodes
                List<Edge> possibleEdges = edges.get(startNode);
                if (possibleEdges == null || possibleEdges.isEmpty()) {
                    return CompletableFuture.completedFuture(state);
                }
                
                // Evaluate conditions and select next node
                Optional<Edge> selectedEdge = selectEdge(possibleEdges, state);
                
                if (selectedEdge.isPresent()) {
                    return execute(selectedEdge.get().to, state);
                }
                
                return CompletableFuture.completedFuture(state);
            });
    }
    
    private CompletableFuture<State> executeNode(String nodeId, State state) {
        WorkflowNode node = nodes.get(nodeId);
        if (node == null) {
            return CompletableFuture.failedFuture(
                new IllegalArgumentException("Node not found: " + nodeId));
        }
        
        state.recordExecution(nodeId);
        
        return node.process(state, vertexClient)
            .exceptionally(throwable -> {
                // Log error and potentially retry with different model
                System.err.println("Node execution failed: " + throwable.getMessage());
                return handleNodeFailure(node, state, throwable);
            });
    }
    
    private Optional<Edge> selectEdge(List<Edge> edges, State state) {
        // Use Gemini to help with complex routing decisions if needed
        List<Edge> validEdges = edges.stream()
            .filter(edge -> edge.condition.test(state))
            .collect(Collectors.toList());
        
        if (validEdges.isEmpty()) {
            return Optional.empty();
        }
        
        if (validEdges.size() == 1) {
            return Optional.of(validEdges.get(0));
        }
        
        // Use weights for selection
        double totalWeight = validEdges.stream()
            .mapToDouble(edge -> edge.weight.apply(state))
            .sum();
        
        double random = Math.random() * totalWeight;
        double cumulative = 0;
        
        for (Edge edge : validEdges) {
            cumulative += edge.weight.apply(state);
            if (random <= cumulative) {
                return Optional.of(edge);
            }
        }
        
        return Optional.of(validEdges.get(0));
    }
    
    private State handleNodeFailure(WorkflowNode node, State state, Throwable error) {
        // Implement retry logic with fallback models
        state.put("error_" + node.getNodeId(), error.getMessage());
        state.metadata.put("failed_node", node.getNodeId());
        return state;
    }
    
    /**
     * Parallel execution of multiple branches
     */
    public CompletableFuture<Map<String, State>> executeParallel(
            Map<String, State> branches) {
        Map<String, CompletableFuture<State>> futures = new HashMap<>();
        
        branches.forEach((nodeId, state) -> {
            futures.put(nodeId, execute(nodeId, state));
        });
        
        return CompletableFuture.allOf(futures.values().toArray(new CompletableFuture[0]))
            .thenApply(v -> {
                Map<String, State> results = new HashMap<>();
                futures.forEach((nodeId, future) -> {
                    results.put(nodeId, future.join());
                });
                return results;
            });
    }
    
    /**
     * State persistence using Firestore
     */
    public interface StateStore {
        void save(State state);
        State load(String workflowId);
        List<State> queryByMetadata(Map<String, String> criteria);
    }
    
    /**
     * Vertex AI client wrapper
     */
    public static class VertexAIClient {
        private final PredictionServiceClient predictionClient;
        private final String projectId;
        private final String location;
        
        public VertexAIClient(String projectId, String location) {
            this.projectId = projectId;
            this.location = location;
            try {
                this.predictionClient = PredictionServiceClient.create();
            } catch (Exception e) {
                throw new RuntimeException("Failed to create Vertex AI client", e);
            }
        }
        
        public String generateContent(String model, String prompt, 
                                    Map<String, Object> parameters) {
            // Implementation using Vertex AI
            EndpointName endpoint = EndpointName.of(projectId, location, model);
            
            Value.Builder instanceBuilder = Value.newBuilder();
            instanceBuilder.putFields("prompt", 
                Value.newBuilder().setStringValue(prompt).build());
            
            PredictRequest request = PredictRequest.newBuilder()
                .setEndpoint(endpoint.toString())
                .addInstances(instanceBuilder.build())
                .build();
            
            PredictResponse response = predictionClient.predict(request);
            return extractText(response);
        }
        
        private String extractText(PredictResponse response) {
            // Extract text from Vertex AI response
            return response.getPredictions(0).getStringValue();
        }
    }
    
    public void shutdown() {
        executor.shutdown();
        try {
            if (!executor.awaitTermination(60, TimeUnit.SECONDS)) {
                executor.shutdownNow();
            }
        } catch (InterruptedException e) {
            executor.shutdownNow();
        }
    }
}